calc/calc/parser.output
   0  $accept : %entry% $end

   1  calc : expr EOL

   2  expr : expr PLUS expr
   3       | expr MINUS expr
   4       | term

   5  term : term MUL term
   6       | factor

   7  factor : INTEGER
   8         | LPAREN expr RPAREN

   9  %entry% : '\001' calc

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . calc  (9)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	calc  goto 5
	expr  goto 6
	term  goto 7
	factor  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	factor : LPAREN . expr RPAREN  (8)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	expr  goto 9
	term  goto 7
	factor  goto 8


state 4
	factor : INTEGER .  (7)

	.  reduce 7


state 5
	%entry% : '\001' calc .  (9)

	.  reduce 9


state 6
	calc : expr . EOL  (1)
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)

	PLUS  shift 10
	MINUS  shift 11
	EOL  shift 12
	.  error


state 7
	expr : term .  (4)
	term : term . MUL term  (5)

	MUL  shift 13
	PLUS  reduce 4
	MINUS  reduce 4
	RPAREN  reduce 4
	EOL  reduce 4


state 8
	term : factor .  (6)

	.  reduce 6


state 9
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	factor : LPAREN expr . RPAREN  (8)

	PLUS  shift 10
	MINUS  shift 11
	RPAREN  shift 14
	.  error


state 10
	expr : expr PLUS . expr  (2)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	expr  goto 15
	term  goto 7
	factor  goto 8


state 11
	expr : expr MINUS . expr  (3)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	expr  goto 16
	term  goto 7
	factor  goto 8


state 12
	calc : expr EOL .  (1)

	.  reduce 1


state 13
	term : term MUL . term  (5)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	term  goto 17
	factor  goto 8


state 14
	factor : LPAREN expr RPAREN .  (8)

	.  reduce 8


state 15
	expr : expr . PLUS expr  (2)
	expr : expr PLUS expr .  (2)
	expr : expr . MINUS expr  (3)

	.  reduce 2


state 16
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr MINUS expr .  (3)

	.  reduce 3


state 17
	term : term . MUL term  (5)
	term : term MUL term .  (5)

	.  reduce 5


10 terminals, 6 nonterminals
10 grammar rules, 18 states
